# first-python-package

./: README.md  pyproject.toml  setup.cfg  setup.py
src/speedy_cars/: __init__.py
src/speedy_cars/Cars/: Nissan.py  __init__.py
src/speedy_cars/F1s/: Mercedez.py  __init__.py
